# pcre2-ocaml

./: .clang-format  .git-blame-ignore-revs  .gitignore  CHANGES.md  README.md  dune  dune-project  flake.nix  opam  pcre2.opam
examples/: dune
src/: bindings.ml  dune  error.ml  intf.ml  old_stubs.c  pcre2.ml  pcre2.mli  pcre2_stubs.c
src/config/: discover.ml
test/: dune  pcre2_tests.ml
