(library
 (public_name pcre2)
 (preprocess
  (pps ppx_inline_test))
 (inline_tests)
 (foreign_stubs
  (language c)
  (names pcre2_stubs)
  (flags
   (:standard)
   (:include c_flags.sexp)
   -O3
   -fPIC
   -DPIC))
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ./config/discover.exe)))
