(library
 (public_name pcre2)
 (preprocess
  (pps ppx_inline_test ppx_deriving.show ppx_deriving.eq))
 (inline_tests)
 (foreign_stubs
  (language c)
  (names pcre2_stubs)
  (flags
   (:standard)
   (:include c_flags.sexp)
   -g))
 (c_library_flags
  (:include c_library_flags.sexp)
  (-g)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ./config/discover.exe)))
